[gd_scene load_steps=5 format=2]

[ext_resource path="res://icon.png" type="Texture2D" id=1]
[ext_resource path="res://Scenes/Layers/Layers.gd" type="Script" id=2]
[ext_resource path="res://Scenes/Instructions/Instructions.tscn" type="PackedScene" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 66.0865, 61.1544 )

[node name="Layers" type="Node2D"]
script = ExtResource( 2 )

[node name="BulletDetect" type="Button" parent="."]
offset_left = 738.762
offset_top = 184.046
offset_right = 843.762
offset_bottom = 204.046
text = "Generar Bullet"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BulletNoDetect" type="Button" parent="."]
offset_left = 750.803
offset_top = 416.253
offset_right = 855.803
offset_bottom = 436.253
text = "Generar Bullet"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TargetDetect" type="Sprite2D" parent="."]
modulate = Color( 0.145098, 1, 0.717647, 0.360784 )
position = Vector2( 158.245, 162.545 )
scale = Vector2( 0.798431, 0.798431 )
texture = ExtResource( 1 )

[node name="AreaDetect" type="Area2D" parent="TargetDetect"]
collision_layer = 32

[node name="CollisionShape2D" type="CollisionShape2D" parent="TargetDetect/AreaDetect"]
shape = SubResource( 1 )

[node name="TargetNoDetect" type="Sprite2D" parent="."]
modulate = Color( 0.823529, 0, 0, 1 )
position = Vector2( 157.385, 405.932 )
scale = Vector2( 0.798431, 0.798431 )
texture = ExtResource( 1 )

[node name="AreaNoDetect" type="Area2D" parent="TargetNoDetect"]
collision_layer = 64
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="TargetNoDetect/AreaNoDetect"]
shape = SubResource( 1 )

[node name="PosDetect" type="Marker2D" parent="."]
position = Vector2( 687.161, 164.265 )

[node name="PosNoDetect" type="Marker2D" parent="."]
position = Vector2( 693.181, 407.652 )

[node name="Instructions" parent="." instance=ExtResource( 3 )]
instructions = "Tutorial del uso de layers. En este tutorial tenemos 2 botones que generan un bullet (ambos generan una instancia de la misma escena de bullet, es decir, son iguales). La escena bullet tiene un Area3D (para ser detectada) que se encuentra en la capa 1 (DETECTION). Por otro lado, a la izquierda de la pantalla se encuentran 2 Areas. Una que detectará y otra que no detectará el pasar del bullet. La que detecta (sin importar en que layer se encuentra) usa una mascara viendo el layer 1 (DETECTION), mientras que el area que no detecta, usa una mascara mirando el layer 2 (NO_DETECTION). Ambas areas estanc onectadas con el script por lo que si alguna DETECTA algo entrando, mostrará un mensaje en pantalla."
[connection signal="button_down" from="BulletDetect" to="." method="_on_BulletDetect_button_down"]
[connection signal="button_down" from="BulletNoDetect" to="." method="_on_BulletNoDetect_button_down"]
[connection signal="area_entered" from="TargetDetect/AreaDetect" to="." method="_on_AreaDetect_area_entered"]
[connection signal="area_entered" from="TargetNoDetect/AreaNoDetect" to="." method="_on_AreaNoDetect_area_entered"]
